# ds

./: direct.py  direct2.py  eq1.py  logistic.py  pyproject.toml  reg-1.py  test.py  vr-test2.py
