[tool.poetry]
name = "ds"
version = "0.1.0"
description = ""
authors = ["N"]

[tool.poetry.dependencies]
python = "^3.8"
scikit-learn = "^0.23.2"
matplotlib = "^3.3.2"
pandas = "^1.1.3"
seaborn = "^0.11.0"
statsmodels = "^0.12.0"
numpy = "^1.19.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
